# sovereign-pq-bench

./: .gitignore  CMakeLists.txt  METHODOLOGY.md  README.md  THREATS_TO_VALIDITY.md  bootstrap_stage1.sh  reproduce.sh  run_full_pipeline.sh  sovereign-bench
apps/: agile_demo.cpp  full_gulf_benchmark.cpp  hardware_bench.cpp  intelligent_advisor.cpp  main.cpp  sovereign_advisor.cpp
benchmarks/: bench_main.cpp  main.cpp
docs/: ARCHITECTURE.md  MODULES.md  ROADMAP.md
include/adapters/: EcdsaAdapter.hpp
include/core/: Types.hpp  Version.hpp
include/crypto/: AbstractCryptoInterface.hpp
include/hashing/: HashAlgorithm.hpp
include/signatures/: SignatureAlgorithm.hpp
include/sovereign/agile/: policy_engine.hpp
include/sovereign/crypto/: ecdsa_engine.hpp  ed25519_engine.hpp  full_kem_engine.hpp  hash_engine.hpp  kem_engine.hpp  ml_dsa_engine.hpp  pq_engine.hpp  signature_scheme.hpp
include/sovereign/metrics/: benchmark_result.hpp  csv_exporter.hpp  energy_meter.hpp  json_exporter.hpp  markdown_exporter.hpp  memory_tracker.hpp  metrics_collector.hpp  microarch_profiler.hpp  statistical_analysis.hpp  system_info.hpp
include/sovereign/utils/: random_generator.hpp  timer.hpp
paper/: sovereign_paper.tex
profiles/: gulf_100_cases.csv
results/: benchmark_results.csv  benchmark_results.json  benchmark_results.md  cbom_report.html  comprehensive_benchmarks.csv  executive_summary.md  generate_scada_report.py  gulf_bench_final.txt  gulf_bench_live.txt  gulf_bench_output.txt  gulf_complete_matrix.csv  hardware_bench_final.txt  hardware_bench_live.txt  hardware_bench_output.txt  hardware_evidence_matrix.csv
results/metadata/: system.json
results/paper_tables/: signature_performance.tex
scripts/: case_study_impact.py  generate_latex_tables.py  gulf_100_visualizer.py  gulf_complete_visualizer.py  gulf_visualizer.py  pareto_frontiers.py  run_full_pipeline.sh  sovereign_style.py  visualize_results.py
sovereign_shim/: README.md
sovereign_shim/include/: sovereign_shim.hpp
sovereign_shim/src/: main.cpp  shim_demo.cpp  sovereign_shim.cpp
src/agile/: policy_engine.cpp
src/core/: CMakeLists.txt  version.cpp
src/crypto/: ecdsa_engine.cpp  ed25519_engine.cpp  hash_engine.cpp  kem_engine.cpp  ml_dsa_engine.cpp  pq_engine.cpp  signature_scheme.cpp
src/metrics/: benchmark_result.cpp  csv_exporter.cpp  energy_meter.cpp  json_exporter.cpp  markdown_exporter.cpp  memory_tracker.cpp  metrics_collector.cpp  microarch_profiler.cpp  statistical_analysis.cpp  system_info.cpp
src/utils/: random_generator.cpp  timer.cpp
tests/: CMakeLists.txt
tests/integration/: test_integration.cpp
tests/unit/: test_all.cpp  test_ecdsa.cpp  test_ml_dsa.cpp
wraith_ebpf/: README.md  cbom_live_scan.csv  cbom_scanner  cbom_tls_fingerprint  jitter_test  wraith_core
wraith_ebpf/include/: wraith_types.h
wraith_ebpf/src/: cbom_scanner.cpp  cbom_tls_fingerprint.c  demo_zero_downtime.sh  generate_cbom_report.py  jitter_storm_test.c  live_cbom_scanner.c  wraith_core_loader.c  wraith_kern.c  wraith_loader.cpp
